Build project and update App.css

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ ul {
 
 .categorysize {
   font-size: 0.8rem;
-  color: darkgray
+  color: darkgray;
 }
 
 .titlesize {
@@ -90,7 +90,7 @@ ul {
 
 .authorsize {
   font-size: 0.9rem;
-  color: darkgray
+  color: darkgray;
 }
 
 .newbook {
