--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@ h3 {
   margin-top: 15px;
 }
 
+h4 {
+  margin-left: 20px;
+  margin-top: 15px;
+  padding-top: 10px;
+}
+
 .divnavbar {
   display: flex;
   justify-content: space-between;
@@ -96,11 +102,33 @@ ul {
 .newbook {
   color: gray;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .divnewbook {
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
+  height: 80px;
+}
+
+.bookform {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.divcategories {
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  width: 95%;
+  margin-left: 2.5%;
+}
+
+.ulcategory {
+  margin-left: 20px;
+}
+
+.bottom {
+  height: 20px;
 }
 
 .userimg {
@@ -144,5 +172,33 @@ button {
   font-size: 0.8rem;
   border: none;
   border-radius: 4px;
-  padding: 2px 6px;
+  padding: 5px 8px;
+}
+
+input {
+  width: 220px;
+  height: 20px;
+  margin-top: 5px;
+}
+.inputclass {
+  margin-left: 20px;
+}
+
+.addBookForm {
+  display: flex;
+  justify-content:space-between;
+}
+
+.bookbutton {
+  margin-right: 30px;
+  width: 130px;
+  height: 35px;
+}
+
+.bookbutton:hover,
+.bookutton:active {
+  margin-right: 30px;
+  width: 130px;
+  height: 35px;
+  font-weight: bold;
 }
