--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 h3 {
   font-size: 1.4rem;
   margin-left: 65px;
-  margin-top: 15px;
+  padding-top: 5px;
 }
 
 h4 {
@@ -22,6 +22,7 @@ h4 {
   height: 40px;
   padding-top: 8px;
   padding-bottom: 8px;
+  margin-bottom: 0;
 }
 
 .navbar {
@@ -73,6 +74,13 @@ ul {
   margin-bottom: 20px;
 }
 
+.bookslisth3 {
+  margin: 5px 0 5px 0;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  padding: 0 0 1px 0;
+}
+
 .div1 {
   margin-left: 20px;
   margin-top: 10px;
@@ -122,6 +130,8 @@ ul {
   border-radius: 10px;
   width: 95%;
   margin-left: 2.5%;
+  margin-bottom: 2px;
+  padding-bottom: 5px;
 }
 
 .categoryitem {
@@ -230,6 +240,7 @@ input {
 .addBookForm {
   display: flex;
   justify-content: space-between;
+  margin-left: 20px;
 }
 
 .bookbutton {
