--- a/src/App.css
+++ b/src/App.css
@@ -185,7 +185,7 @@ ul {
 .lightbutton1:active {
   background-color: transparent;
   border: none;
-  color: #04437a;
+  color: #025caa;
   font-size: 1rem;
   font-weight: bold;
 }
@@ -204,7 +204,7 @@ ul {
 .lightbutton2:active {
   background-color: transparent;
   border: none;
-  color: #04437a;
+  color: #025caa;
   font-size: 1rem;
   font-weight: bold;
 }
@@ -223,7 +223,7 @@ ul {
 .lightbutton3:active {
   background-color: transparent;
   border: none;
-  color: #04437a;
+  color: #025caa;
   font-size: 1rem;
   font-weight: bold;
 }
@@ -247,12 +247,12 @@ ul {
 }
 
 button {
-  background-color: #0290ff;
-  color: rgb(255, 255, 255);
-  font-size: 0.8rem;
+  padding: 0;
   border: none;
-  border-radius: 4px;
-  padding: 5px 8px;
+  outline: none;
+  font: inherit;
+  color: inherit;
+  background: none;
 }
 
 input {
@@ -272,14 +272,18 @@ input {
 }
 
 .bookbutton {
-  margin-right: 30px;
+  margin-right: 50px;
   width: 130px;
   height: 35px;
+  font-size: 0.7rem;
+  font-weight: normal;
+  background-color: #0290ff;
+  color: rgb(255, 255, 255);
 }
 
 .bookbutton:hover,
 .bookutton:active {
-  margin-right: 30px;
+  margin-right: 50px;
   width: 130px;
   height: 35px;
   font-weight: bold;
@@ -306,12 +310,6 @@ input {
 }
 
 .circle {
-  /* background: rgb(255, 255, 255);
-  border-radius: 20px;
-  border-color: #307bbe;
-  width: 60px;
-  height: 60px;
-  color: rgb(255, 255, 255); */
   margin-right: 20px;
 }
 
