--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ h4 {
   justify-content: space-between;
   background-color: rgb(255, 255, 255);
   width: 100%;
-  height: 40px;
+  height: 3.4rem;
   padding-top: 8px;
   padding-bottom: 8px;
   margin-bottom: 0;
@@ -29,36 +29,36 @@ h4 {
 .navbar {
   display: flex;
   padding-right: 20px;
-  margin-left: 40px;
+  margin-left: 6rem;
   margin-top: 10px;
 }
 
 a {
-  margin-left: 10px;
+  margin-left: 2rem;
   text-decoration: none;
   color: grey;
   width: 50px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   font-weight: lighter;
   padding-top: 8px;
-  padding-left: 10px;
+  padding-left: 1.2rem;
 }
 
 a:hover,
 a:active {
   color: black;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 .sitename {
   color: #0290ff;
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 .booklist {
-  width: 95%;
-  margin-left: 2.5%;
+  width: 82%;
+  margin-left: 9%;
 }
 
 .bookdetails {
@@ -77,7 +77,9 @@ ul {
   width: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .bookslisth3 {
@@ -92,11 +94,12 @@ ul {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-right: 90px;
+  width: 15rem;
 }
 
 .div2 {
   max-height: 62px;
-  width: 150px;
+  width: 12rem;
   margin-right: 0;
   margin-top: 20px;
   display: flex;
@@ -105,19 +108,19 @@ ul {
 }
 
 .div3 {
-  margin-right: 120px;
+  margin-right: 40px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
 .categorysize {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   color: darkgray;
   font-weight: bold;
 }
 
 .titlesize {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: bold;
 }
 
@@ -131,10 +134,10 @@ ul {
   color: gray;
   font-weight: bold;
   margin-bottom: 10px;
+  margin-left: 0;
 }
 
 .divnewbook {
-  background-color: rgb(255, 255, 255);
   border-radius: 10px;
   height: 80px;
 }
@@ -167,7 +170,7 @@ ul {
 }
 
 .userimg {
-  margin-right: 40px;
+  margin-right: 6rem;
   margin-top: 12px;
 }
 
@@ -175,8 +178,9 @@ ul {
   background-color: transparent;
   border: none;
   color: #4386bf;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: lighter;
+  text-align: left;
   width: 94px;
   padding-left: 0;
 }
@@ -186,16 +190,17 @@ ul {
   background-color: transparent;
   border: none;
   color: #025caa;
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 0.9rem;
+  font-weight: normal;
 }
 
 .lightbutton2 {
   background-color: transparent;
   border: none;
   color: #4386bf;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: lighter;
+  text-align: left;
   width: 75px;
   padding-left: 0;
 }
@@ -205,16 +210,17 @@ ul {
   background-color: transparent;
   border: none;
   color: #025caa;
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 0.9rem;
+  font-weight: normal;
 }
 
 .lightbutton3 {
   background-color: transparent;
   border: none;
   color: #4386bf;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: lighter;
+  text-align: left;
   width: 45px;
   padding-left: 0;
 }
@@ -224,17 +230,18 @@ ul {
   background-color: transparent;
   border: none;
   color: #025caa;
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 0.9rem;
+  font-weight: normal;
 }
 
 .buttonbook {
   background-color: #0290ff;
   color: rgb(255, 255, 255);
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   font-weight: lighter;
   border: transparent;
-  width: 135px;
+  width: 11.5rem;
+  height: 2.1rem;
   padding: 8px 12px;
 }
 
@@ -265,14 +272,33 @@ input {
   margin-left: 20px;
 }
 
+.inputtitle {
+  width: 22.5rem;
+  font-family: Montserrat, sans-serif;
+}
+
+.inputtitle::placeholder {
+  color: #c4c4c4;
+  font-family: Montserrat, sans-serif;
+}
+
+.inputauthor {
+  width: 12.5rem;
+  font-family: Montserrat, sans-serif;
+}
+
+.inputauthor::placeholder {
+  color: #c4c4c4;
+  font-family: Montserrat, sans-serif;
+}
+
 .addBookForm {
   display: flex;
   justify-content: space-between;
-  margin-left: 20px;
 }
 
 .bookbutton {
-  margin-right: 50px;
+  margin-right: 0;
   width: 130px;
   height: 35px;
   font-size: 0.7rem;
@@ -283,7 +309,7 @@ input {
 
 .bookbutton:hover,
 .bookutton:active {
-  margin-right: 50px;
+  margin-right: 0;
   width: 130px;
   height: 35px;
   font-weight: bold;
@@ -292,7 +318,7 @@ input {
 }
 
 .chaptertext {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   font-weight: lighter;
   color: #121212;
   margin: 0;
@@ -314,17 +340,17 @@ input {
 }
 
 .completed {
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   font-weight: lighter;
   margin: 0;
-  padding-top: 4px;
+  padding-top: 2px;
   padding-bottom: 4px;
 }
 
 .percentage {
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: normal;
   margin: 0;
   padding-top: 4px;
-  padding-bottom: 4px;
+  padding-bottom: 0;
 }
